--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Image Caption</title>
+    <title>ZoomScape</title>
   </head>
   <body>
     <div id="app">
       <div id="image-container">
-        <img id="main-image" src="" alt="Random Image">
+        <img id="main-image" src="" alt="main image">
       </div>
       <div id="caption"></div>
     </div>
